css/landingpage.css
/* ... */
/* size of x in close button */
.close > span {
    font-size: 18px;
    color: #333333;
    position: absolute;
    top: 0;
    left: 0;
    transform: translate(50%, 5%);
}

.card-pictures {
    border-radius: 50%;
        
}

.flipcard.text-center {
    width: 240px;
    display: inline-block;
}

.row.team-row {
    text-align: center;
}

::selection {
    background: #1d40ec;
    color: #fff;
}

.pricing-choice-active {
    color: white;
    font-weight: 700;
    font-size: 16px;
}

.pricing-choice-inactive {
    color: #d6d6d6;
    font-weight: 700;
    font-size: 16px;
}

.individual-left,
.api-right {
    position: relative;
    padding-bottom: 2px;
    display: inline-block;
}

.individual-left::before {
    content: '';
    display: block;
    position: absolute;
    height: 4px;
    width: 100%;
    bottom: 0;
    left: 0;
    background: linear-gradient(to right, white 46%, #d6d6d6 46%)
}

.api-right::before {
    content: '';
    display: block;
    position: absolute;
    height: 4px;
    width: 100%;
    bottom: 0;
    left: 0;
    background: linear-gradient(to right, #d6d6d6 46%, white 46%)
}

.table-col-width {
    width: 20%;
    text-align: center;
}

.small-button {
    font-size: 10px;
    padding: 3px 6px;
}

.pricing-logo {
    height: 250px;
    position: absolute;
    bottom: -50px;
    right: 0;
}

.test-pricing {
    height: 100%;
    position: absolute;
    right: 0;
    transform: translateY(-40%);
}

.api-pricing {
    height: 150%;
    position: absolute;
    right: 0;
    transform: translateY(-30%);
}

.pricing-logo-docs {
    height: 140%;
    position: absolute;
    right: -20%;
    transform: translateY(-20%);
}

.optional-logo {
    height: 300%;
    position: absolute;
    right: 0%;
    transform: translateY(-40%);
}

.row-equal-height {
    display: flex;
    display: -webkit-flex;
    flex-wrap: wrap;
}

.highlight-row-purple {
    background: linear-gradient(169deg, #dd68ff 0%, #413eff 100%);
}

.highlight-row-special-above {
    height: 8rem
}

.highlight-row-special::before {
    top:-7rem;
    left:-2rem;
    right:0rem;
    height:14rem;
    border-top: 1px solid rgba(130,148,255, 0.2);
    background-color: #fafbfc;
    background-position-x:center;
    background-position-y:bottom;
    background-size:100% auto;
    transform:rotate(4deg);
    content: "";
    position: absolute;
    background-repeat: no-repeat;
    pointer-events: none;
    display: block;
    z-index: -1;
}

.highlight-row-special {
    background: linear-gradient(180deg, #fafbfc 0, rgba(130,148,255,0.4));
    position: relative;
}

.highlight-row-green {
    background: linear-gradient(90deg, rgba(50,251,145,1) 0%, rgba(87,255,198,1) 100%);;
}

.highlight-row-blue {
    background: linear-gradient(90deg, rgba(97,89,255,1) 0%, rgba(62,236,255,1) 100%);
}

.highlight-row-neon-blue {
    background: linear-gradient(90deg, rgba(37,255,253,1) 0%, rgba(62,236,255,1) 100%);
}


.table-header-fixed {
    background-color: white;
    border-left: 1px solid white !important;
    border-right: 1px solid white !important;
    border-top: 1px solid white !important;
    border-bottom: 1px solid white !important;
}

.btn-horizontal-padding {
    padding: 0px 5px;
}

.column-right-border {
    border-right: 3px solid #00f9d8 !important;
    border-left: 3px solid #00f9d8 !important;
    position: relative !important;
}

.column-right-border:before {
    box-shadow: -15px 0 8px -15px inset;
    content: " ";
    color: #333333;
    height: 102%;
    left: -15px;
    position: absolute;
    top: 0;
    width: 15px;
}

.column-right-border:after {
    box-shadow: 15px 0 8px -15px inset;
    content: " ";
    height: 102%;
    color: #333333;
    position: absolute;
    top: 0;
    right: -15px;
    width: 15px;
}

.column-right-border-top:before {
    box-shadow: -15px 0 8px -15px inset;
    content: " ";
    color: #333333;
    height: 104%;
    left: -15px;
    position: absolute;
    top: 0;
    width: 15px;
}

.column-right-border-top:after {
    box-shadow: 15px 0 8px -15px inset;
    content: " ";
    height: 104%;
    color: #333333;
    position: absolute;
    top: 0;
    right: -15px;
    width: 15px;
}

.bottom-shadow-hack {
    position: absolute;
    bottom: 0px;
    height: 10px;
    width: 100%
}

.bottom-shadow-hack:before {
    box-shadow: 0px 10px 4px -1px;
    content: " ";
    color: #7a7a7a;
    height: 5px;
    bottom: 5px;
    position: absolute;
    left: -1%;
    width: 102%;
}

.top-shadow-hack {
    position: absolute;
    top: 0px;
    height: 10px;
    width: 100%
}

.top-shadow-hack:before {
    box-shadow: inset 0px -10px 8px -12px #333; 
    content: " ";
    color: #7a7a7a;
    height: 5px;
    top: -5px;
    position: absolute;
    left: -1%;
    width: 102%;
}

.column-right-border-top {
    border-right: 3px solid rgb(0, 249, 216, 0.5) !important;
    border-left: 3px solid #00f9d8 !important;
    border-top: none !important;
    position: relative !important;
}

.column-bottom-border {
    border-bottom: 2px solid #00c7ac !important
}

.paragraph-small-margin {
    margin: 2px;
}

.blue-check {
    color: blue
}

.highlight-border {
    height: 5px;
    border-radius: 2px;
    background: 2px linear-gradient(169deg, rgba(198,50,241,1) 0%, rgba(65,62,255,1) 100%);
}

.picture-padding {
    padding-top: 50px
}

.subscription-box {
    display: inline-block;
    padding: 2px;
    margin: 10px 0px;
}

.subscription-box-margins {
    padding: 2px;
    margin: 0 auto;
    width: 100%;
    height: 104px;
}

.subscription-box-margins-large {
    display: inline-block;
    padding: 2px;
    margin: 10px;
    max-width: 300px;
}    

.subscription-box-margins > div > h3,
.subscription-box-margins > div > p,
.subscription-box-margins-large > div > h3,
.subscription-box-margins-large > div > p {
    margin: 0px;
}

.subscription-content {
    background: #fff;
    padding: 10px;
    height: 100px;
    display: block;
    position: relative;
}
/* ... */

